# weather_dashboard

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
pirate_weather/: Cargo.toml  PW_OpenAPI.yaml  README.md  fetch.sh  generate.sh
pirate_weather/.openapi-generator/: FILES
pirate_weather/docs/: AlertsInner.md  Currently.md  Daily.md  DailyDataInner.md  Flags.md  FlagsSourceIdx.md  FlagsSourceIdxEtopo.md  FlagsSourceIdxGfs.md  FlagsSourceIdxHrrr.md  FlagsSourceIdxNbm.md  FlagsSourceTimes.md  Hourly.md  HourlyDataInner.md  Minutely.md  MinutelyDataInner.md  Weather200Response.md  Weather400Response.md  Weather404Response.md  Weather500Response.md  Weather502Response.md  WeatherApi.md
pirate_weather/src/apis/: configuration.rs  mod.rs  weather_api.rs
pirate_weather/src/models/: alerts_inner.rs  currently.rs  daily.rs  daily_data_inner.rs  flags.rs  flags_source_idx.rs  flags_source_idx_etopo.rs  flags_source_idx_gfs.rs  flags_source_idx_hrrr.rs  flags_source_idx_nbm.rs  flags_source_times.rs  hourly.rs  hourly_data_inner.rs  minutely.rs  minutely_data_inner.rs  mod.rs  weather_200_response.rs  weather_400_response.rs  weather_404_response.rs  weather_500_response.rs  weather_502_response.rs
server/: Cargo.toml  config.toml.example
server/src/: config.rs  filter.rs  filters.rs  forecast.rs  main.rs  routes.rs  worker.rs
server/static/: main.css
server/templates/: main.tera
