[package]
name = "pirate_weather"
version = "2.6.0"
authors = ["mail@pirateweather.net"]
description = "Pirate Weather provides an open, free, and documented source of government weather data."
license = "Apache License 2.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
async-trait = "^0.1"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
